# Full_Trip_Planning_Council

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
agents/: budget_agent.py  budget_validator.py  currency_helper.py  destination_agent.py  food_culture_agent.py  groq_helper.py  hotel_agent.py  itinerary_agent.py  notifier_agent.py  safety_agent.py  transport_agent.py  weather_agent.py
graph/: orchestrator.py  state.py
rag/: ingest.py  retriever.py
rag/data/: destinations.txt  food_culture.txt  hotels.txt  safety_tips.txt  transport.txt
tools/: calendar_tool.py  gmail_tool.py  weather_tool.py  web_search_tool.py
